--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha2 
  	- Added paging on all song displays including search
  	- Fixed searching via quicksearch bar
  	- Added 'Your' playlists to leftbar with play and view links
  	- Fixed clear now playing
  	- Fixed now playing issues with Audacious 1.3.x office space style

--------------------------------------------------------------------------
  v.3.4-Alpha1 07/29/2007
	- Improved Albums of the Moment performance on large catalogs
		(Thx Vlet)
  	- Added Migration script for config file. Also added in sane
		redirection on config parse failure
  	- Added initial dyanmic playlist item support, only default
		and genre work right now. 
	- Added support for Internet Radio Stations
	- Updated LastFM submission formating to account for changes on 
		last.fm (Thx entropathy)
	- Fixed LastFM and increased timeout slightly in an attempt to 
		improve success rate
	- Disabled Search, Random Play & Localplay for Alpha release
	- Repalced CC Flash player with the previous GPL based flash player
		used patched 0.2.3 version created by Sylvain of 
		http://www.jamendo.com/fr/
	- Round the downsampled content-length
  	- Fixed cataloging so that Orphaned Albums are always the same year
  	- Added new preferences, created new Playlist Preference section
	- Fixed Find album art so it can look in the id3/wma art tags 
		correctly (Thx Karl Hungus)
  	- Updated SQL to latest version
  	- Moved Album art out of the album table into album_data 
  	- Changed Browsing Method and default playlist method
  	- Added Play links for Favorite Artists/Albums/Songs
  	- Fixed an issue with the random album selection that was causing
		a full table scan, which could lead to poor performance