@@ -49,6 +49,11 @@ database_password = password
 ; DEFAULT: 900
 session_length = 900
 
+; Length that the session for a single streaming instance will last
+; the default is 15min. With some clients, and long songs this can 
+; cause playback to stop, increase this value if you experience that
+stream_length = 900
+
 ; This length defines how long a 'remember me' session and cookie will 
 ; last, the default is 900, same as length. It is up to the administrator
 ; of the box to increase this, for reference 86400 = 1 day 
